[gd_scene load_steps=15 format=3 uid="uid://dngmjmggpkmbb"]

[ext_resource type="Script" path="res://scenes/game_manager.gd" id="1_3e4ex"]
[ext_resource type="PackedScene" uid="uid://bsvdg3ojnd0oj" path="res://ui/ControllerMenu.tscn" id="1_jrpsb"]
[ext_resource type="PackedScene" uid="uid://bd5lrudlpxbay" path="res://ui/GameOverMenu.tscn" id="3_gr4m8"]
[ext_resource type="Script" path="res://characters/player/PlayerEntity.gd" id="4_4dvp6"]
[ext_resource type="PackedScene" uid="uid://d3yswfl2m7nue" path="res://characters/player/CharacterControllers/OneStickController.tscn" id="5_l3pfp"]
[ext_resource type="PackedScene" uid="uid://d1rmoxdu5yefv" path="res://characters/player/CharacterControllers/TwoStickController.tscn" id="6_0kcvc"]
[ext_resource type="PackedScene" uid="uid://drvgaalhd5v8s" path="res://characters/player/CharacterControllers/TwoStickControllerAuto.tscn" id="7_g0663"]
[ext_resource type="PackedScene" uid="uid://bwf5frggyeobl" path="res://characters/player/CharacterControllers/KeyboardMouseController.tscn" id="8_gqe56"]
[ext_resource type="Resource" uid="uid://bj1ewi4mrx1c6" path="res://ui/game_data_store.tres" id="9_fcv0m"]
[ext_resource type="PackedScene" uid="uid://c5l20701ck6co" path="res://characters/player/health_manager.tscn" id="10_xhpbn"]
[ext_resource type="Script" path="res://characters/PositionResetter.gd" id="11_trrml"]
[ext_resource type="PackedScene" uid="uid://ds848t2x4cxyt" path="res://characters/player/CharacterSkins/IcySkin_inherited.tscn" id="12_8mca8"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.492627
height = 1.97047

[sub_resource type="SphereShape3D" id="SphereShape3D_q0x46"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_3e4ex")

[node name="ControllerMenu" parent="." instance=ExtResource("1_jrpsb")]

[node name="GameOverMenu" parent="." instance=ExtResource("3_gr4m8")]
visible = false

[node name="PlayerEntity" type="CharacterBody3D" parent="."]
collision_mask = 27
floor_max_angle = 0.872665
script = ExtResource("4_4dvp6")
controller_schemes = Array[PackedScene]([ExtResource("5_l3pfp"), ExtResource("6_0kcvc"), ExtResource("7_g0663"), ExtResource("8_gqe56")])
game_data = ExtResource("9_fcv0m")
inventory = null

[node name="Collider" type="CollisionShape3D" parent="PlayerEntity"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.987748, 0)
shape = SubResource("1")

[node name="HealthManager" parent="PlayerEntity" instance=ExtResource("10_xhpbn")]

[node name="PositionResetter" type="Node" parent="PlayerEntity"]
script = ExtResource("11_trrml")

[node name="CameraPivot" type="Node3D" parent="PlayerEntity"]
transform = Transform3D(-0.707107, 0.298836, -0.640857, 0, 0.906308, 0.422618, 0.707107, 0.298836, -0.640857, 0, 0, 0)

[node name="ThirdPersonCamera" type="Camera3D" parent="PlayerEntity/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35)
current = true
fov = 40.0

[node name="IcySkin" parent="PlayerEntity" instance=ExtResource("12_8mca8")]

[node name="PlayerHand" type="Area3D" parent="PlayerEntity/IcySkin"]
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerEntity/IcySkin/PlayerHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00531, 0.798733)
shape = SubResource("SphereShape3D_q0x46")

[connection signal="damage" from="PlayerEntity/HealthManager" to="PlayerEntity" method="on_hit"]
[connection signal="health_depleted" from="PlayerEntity/HealthManager" to="PlayerEntity" method="on_death"]
